--- a/docs/migration-guides/qiskit-1.0-installation.mdx
+++ b/docs/migration-guides/qiskit-1.0-installation.mdx
@@ -38,24 +38,24 @@ PowerShell is used for Windows commands.
 <span id="creating-a-venv"></span>
 ### Create the new environment
 
-1. Create a new virtual environment, using your preferred version of Python 3.8 or later. Use any path you choose in place of `/path/to/qiskit-1.0-venv`.
+1. Create a new virtual environment in each project directory you're working in, using your preferred version of Python 3.8 or later.
 
         <OperatingSystemTabs>
           <TabItem value="mac" label="macOS">
              ```bash
-             python3 -m venv /path/to/qiskit-1.0-venv
+             python3 -m venv .venv
              ```
           </TabItem>
 
           <TabItem value="linux" label="Linux">
              ```bash
-             python3 -m venv /path/to/qiskit-1.0-venv
+             python3 -m venv .venv
              ```
           </TabItem>
 
           <TabItem value="win" label="Windows">
             ```powershell
-            python3 -m venv C:\path\to\qiskit-1.0-venv
+            python -m venv .venv
             ```
           </TabItem>
          </OperatingSystemTabs>
@@ -66,19 +66,19 @@ PowerShell is used for Windows commands.
         <OperatingSystemTabs>
           <TabItem value="mac" label="macOS">
              ```bash
-             source /path/to/qiskit-1.0-venv/bin/activate
+             source .venv/bin/activate
              ```
           </TabItem>
 
           <TabItem value="linux" label="Linux">
              ```bash
-             source /path/to/qiskit-1.0-venv/bin/activate
+             source .venv/bin/activate
              ```
           </TabItem>
 
           <TabItem value="win" label="Windows">
             ```powershell
-            C:\path\to\qiskit-1.0-venv\Scripts\activate.ps1
+            .venv\Scripts\activate.ps1
             ```
           </TabItem>
          </OperatingSystemTabs>
@@ -126,24 +126,24 @@ PowerShell is used for Windows commands.
 <span id="activating-a-venv"></span>
 ### Use the new environment
 
-Each time you start a new command line session, you must "activate" the environment by running the `activate` command:
+Each time you start a new command line session, you must navigate to your project directory and "activate" the environment by running the `activate` command:
 
         <OperatingSystemTabs>
           <TabItem value="mac" label="macOS">
              ```bash
-             source /path/to/qiskit-1.0-venv/bin/activate
+             source .venv/bin/activate
              ```
           </TabItem>
 
           <TabItem value="linux" label="Linux">
              ```bash
-             source /path/to/qiskit-1.0-venv/bin/activate
+             source .venv/bin/activate
              ```
           </TabItem>
 
           <TabItem value="win" label="Windows">
             ```powershell
-            C:\path\to\qiskit-1.0-venv\Scripts\activate.ps1
+            .venv\Scripts\activate.ps1
             ```
           </TabItem>
          </OperatingSystemTabs>
