--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -7,18 +7,29 @@ description: An overview of the available execution modes in Qiskit Runtime; ses
 
 There are several ways to run workloads, depending on your needs.  Execution modes determine how your jobs are scheduled, and choosing the right execution mode allows your jobs to run efficiently within your budget.
 
+## Job mode
 
-**Job mode**: A single primitive request of the estimator or the sampler made without a context manager. Circuits and inputs are packaged as primitive unified blocs (PUBs) and submitted as an execution task on the quantum computer. To run in job mode, specify `mode=backend` when instantiating a primitive. See [Primitives examples](/guides/primitives-examples) for examples.
+A single primitive request of the estimator or the sampler made without a context manager. Circuits and inputs are packaged as primitive unified blocs (PUBs) and submitted as an execution task on the quantum computer. To run in job mode, specify `mode=backend` when instantiating a primitive. See [Primitives examples](/guides/primitives-examples) for examples.
 
 <Admonition type="note">
 The queuing time does not decrease for the first job submitted within a session or batch. Therefore, sessions and batches do not provide any benefits when running a single job. Additionally, sessions and batches do not work on simulators because simulators do not have a queue.
 </Admonition>
 
-**Batch mode**: A multi-job manager for efficiently running an experiment that is comprised of bundles of independent jobs. Use batch mode to submit multiple primitive jobs simultaneously.
+## Batch mode
+
+A multi-job manager for efficiently running an experiment that is comprised of bundles of independent jobs. Use batch mode to submit multiple primitive jobs simultaneously.
+
+<Admonition type="note">
+    When batching, jobs are not guaranteed to run in the order they are submitted. Also, while your batch jobs will run as closely together as possible, they don't get exclusive access to the backend. Therefore, your batch jobs might run in parallel with other users' jobs if there is enough processing capacity on the QPU. Additionally, QPU calibration jobs could run between the batched jobs.
+</Admonition>
+
+![This diagram illustrates jobs submitted in a batch.  It shows five jobs, numbered 0 through 4, in a queue. The jobs are a mix of Estimator and Sampler.](/images/guides/batch.png 'Figure 1: Batch execution')
 
 To run in batch mode, specify `mode=batch` when instantiating a primitive or run the job in a batch context manager. See [Run jobs in a batch](/guides/run-jobs-batch) for examples.
 
-**Session mode**: A dedicated window for running a multi-job workload. This allows users to experiment with variational algorithms in a more predictable way and even run multiple experiments simultaneously, taking advantage of parallelism in the stack. Using sessions helps avoid delays caused by queuing each job separately, which can be particularly useful for iterative tasks that require frequent communication between classical and quantum resources.
+## Session mode
+
+A dedicated window for running a multi-job workload. This allows users to experiment with variational algorithms in a more predictable way and even run multiple experiments simultaneously, taking advantage of parallelism in the stack. Using sessions helps avoid delays caused by queuing each job separately, which can be particularly useful for iterative tasks that require frequent communication between classical and quantum resources.
 
  To run in session mode, specify `mode=session` when instantiating a primitive, or run the job in a session context manager. See [Run jobs in a session](/guides/run-jobs-session) for examples.
 
@@ -26,7 +37,7 @@ To run in batch mode, specify `mode=batch` when instantiating a primitive or run
 Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
 </Admonition>
 
-## How long do workloads run?
+# How long do workloads run?
 
 The amount of time an execution runs depends on the values for maximum execution time (or _time to live_ (TTL)), interactive timeout (or _interactive time to live_ (ITTL)), and, for Qiskit Runtime on IBM Cloud&reg;, the specified Cost limit. Additionally, the time your workload actively runs is probably different from the amount of wall clock time a workload takes.
 
@@ -36,7 +47,7 @@ The amount of time an execution runs depends on the values for maximum execution
 
 For full details about these values, including how to determine the ITTL value, review the [Maximum execution time guide.](/guides/max-execution-time)
 
-## Basic workflow
+# Basic workflow
 
 The basic workflow for batches and sessions is similar:
 
@@ -56,7 +67,7 @@ The following video illustrates the session basic workflow, using sessions as an
 
 <span id="sessions-versus-batch-usage" />
 
-## Choose the right execution mode
+# Choose the right execution mode
 
 Utility-scale workloads can take many hours to complete, so it is important that both the classical and quantum resources are scheduled efficiently to streamline the execution. Execution modes provide flexibility in balancing the cost and time tradeoff to use resources optimally for your workloads. There are several aspects to consider when choosing which execution mode to use, such as _usage_, overall execution time (TTL), and time between jobs (ITTL).
 
@@ -66,7 +77,7 @@ The the benefits of each are summarazed below:
    - The entire batch of jobs is scheduled together and there is no additional queuing time for each.
    - The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially.
    - There is usually minimal delay between jobs, which can help avoid drift.
-   - If you partition your workload into multiple jobs and run them in batch mode, you can get results from individual jobs, which makes them more flexible to work with.
+   - If you partition your workload into multiple jobs and run them in batch mode, you can get results from individual jobs, which makes them more flexible to work with. For example, if a job's results don't meet your expectations, you can cancel the remaining jobs. Also, if one job fails, you can re-submit it instead of re-running the entire workload.
 - **Session**
    - Dedicated and exclusive access to the QPU during the session active window.
    - Can run multiple experiments simultaneously.
@@ -76,7 +87,7 @@ The the benefits of each are summarazed below:
    - Might run sooner than batch mode.
 
 <span id="best-practices"></span>
-### Recommendations and best practices
+## Recommendations and best practices
 
 Generally, you can use batch mode unless you have workloads that don’t have all inputs ready at the outset.
 
@@ -93,7 +104,7 @@ To ensure the most efficient use of the execution modes, the following practices
 The above are general guidelines, and you should tune your workload to find the optimal ratio, especially when using sessions. For example, if you are using a session to get exclusive access to a backend, consider breaking up large jobs into smaller ones and running them in parallel. This might be more cost-effective because it can reduce wall clock time.
 
 <span id="usage"></span>
-### Usage
+## Usage
 
 Usage is an important consideration when choosing which execution mode to use.  It is a measurement of the amount of time the QPU is locked for your workload.
 
@@ -116,7 +127,7 @@ Your usage has different impacts, depending on which channel you're using:
 - For IBM Quantum Platform users, this translates to shares. The [fair-share scheduler](/guides/fair-share-scheduler) prioritizes instances with the most shares left. Thus, the higher your usage, the longer your next job stays in the queue.
 
 <span id="failed-job"></span>
-#### Usage for failed and canceled jobs
+### Usage for failed and canceled jobs
 
 When a job is failed or canceled, the reported usage is as follows:
 
@@ -126,7 +137,19 @@ When a job is failed or canceled, the reported usage is as follows:
 
 ## Examples
 
-Give some examples - e.g. what should you expect when running an iterative workload using session vs batch vs job
+### Run a quantum variational algorithm
+
+Running a quantum variational algorithm typically follows this flow:
+
+1. Prepare the ansatz.
+2. Evaluate the cost function on a QPU.
+3. Take the result from the previous step and run it through a classical optimizer.
+4. Adjust the parameters according to the output of (3), then go back to step (2).
+
+In this case, if you were using job or batch mode, each job generated by step (2) needs to go back through the queue. This drastically increases the experiment length (wall clock time) due to the queuing time. It could also take longer to converge due to device drift.  That is, every iteration is supposed give you a better result, but device drift could make subsequent results worse.
+
+In addition, if you use [PEA](/guides/error-mitigation-and-suppression-techniques#pea) or [PEC](/guides/error-mitigation-and-suppression-techniques#pec), you can learn the noise model once and apply it to subsequent jobs when running in dedicated session. This usually doesn't work with batch or job mode because the noise model could become stale by the time the next iteration runs.
+
 
 ## Next steps
 
