--- a/docs/api/qiskit-ibm-transpiler/0.4/index.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.4/index.mdx
@@ -6,6 +6,6 @@ description: Index of all the modules in qiskit-ibm-transpiler v0.4.
 # qiskit-transpiler-service API reference
 
 *   [AI (`qiskit_transpiler_service.ai`)](ai)
-*   [Qiskit Transpiler Service (`qiskit_transpiler_service.transpiler_service`)](transpiler_service)
+*   [Qiskit Transpiler Service (`qiskit_transpiler_service.transpiler_service`)](transpiler-service)
 *   [Utilities (`qiskit_transpiler_service.utils`)](utils)
 
