--- a/docs/api/qiskit-ibm-transpiler/0.7/index.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.7/index.mdx
@@ -6,6 +6,6 @@ description: Index of all the modules in qiskit-ibm-transpiler v0.7.
 # qiskit-ibm-transpiler API reference
 
 *   [AI (`qiskit_ibm_transpiler.ai`)](ai)
-*   [Qiskit IBM Transpiler (`qiskit_ibm_transpiler.transpiler_service`)](transpiler_service)
+*   [Qiskit IBM Transpiler (`qiskit_ibm_transpiler.transpiler_service`)](transpiler-service)
 *   [Utilities (`qiskit_ibm_transpiler.utils`)](utils)
 
