--- a/docs/guides/visualize-results.ipynb
+++ b/docs/guides/visualize-results.ipynb
@@ -70,7 +70,9 @@
     "from qiskit_aer.primitives import Sampler\n",
     "\n",
     "from qiskit import QuantumCircuit\n",
-    "from qiskit.visualization import plot_histogram"
+    "from qiskit.visualization import plot_histogram\n",
+    "\n",
+    "sampler = Sampler(backend_options={\"seed_simulator\": 1234})"
    ]
   },
   {
@@ -95,7 +97,7 @@
     "bell.measure_all()\n",
     "\n",
     "# execute the quantum circuit\n",
-    "quasi_dists = Sampler().run(bell, shots=1000).result().quasi_dists[0]\n",
+    "quasi_dists = sampler.run(bell, shots=1000).result().quasi_dists[0]\n",
     "print(quasi_dists)"
    ]
   },
@@ -162,7 +164,7 @@
    ],
    "source": [
     "# Execute two-qubit Bell state again\n",
-    "second_quasi_dists = Sampler().run(bell, shots=1000).result().quasi_dists[0]\n",
+    "second_quasi_dists = sampler.run(bell, shots=1000).result().quasi_dists[0]\n",
     "\n",
     "# Plot results with custom options\n",
     "plot_histogram(\n",
@@ -238,7 +240,8 @@
     "observables_labels = [\"ZZ\", \"XX\", \"YZ\", \"ZY\", \"XY\", \"XZ\", \"ZX\"]\n",
     "observables = [SparsePauliOp(label) for label in observables_labels]\n",
     "\n",
-    "result = Estimator().run([qc] * 7, observables).result()\n",
+    "estimator = Estimator(backend_options={\"seed_simulator\": 1234})\n",
+    "result = estimator.run([qc] * 7, observables).result()\n",
     "print(result)\n",
     "\n",
     "# Plot using Matplotlib\n",
