--- a/docs/api/qiskit-ibm-runtime/0.17/index.mdx
+++ b/docs/api/qiskit-ibm-runtime/0.17/index.mdx
@@ -5,6 +5,6 @@ description: Index of all the modules in qiskit-ibm-runtime v0.17.
 
 # qiskit-ibm-runtime API reference
 
-*   [Qiskit Runtime (`qiskit_ibm_runtime`)](runtime_service)
+*   [Qiskit Runtime (`qiskit_ibm_runtime`)](runtime-service)
 *   [Primitive options (`qiskit_ibm_runtime.options`)](options)
 
