--- a/docs/api/qiskit-ibm-runtime/0.16/options.mdx
+++ b/docs/api/qiskit-ibm-runtime/0.16/options.mdx
@@ -16,7 +16,7 @@ python_api_name: qiskit_ibm_runtime.options
 
 Options that can be passed to the primitives.
 
-The [`Options`](qiskit_ibm_runtime.options.Options "qiskit_ibm_runtime.options.Options") class encapsulates all the options you can specify when invoking a primitive. It includes frequently used options, such as `optimization_level` and `resilience_level` as well as sub-categories, such as `transpilation` and `execution`. You can use auto-complete to easily find the options inside each sub-category, for example:
+The [`Options`](options-options "qiskit_ibm_runtime.options.Options") class encapsulates all the options you can specify when invoking a primitive. It includes frequently used options, such as `optimization_level` and `resilience_level` as well as sub-categories, such as `transpilation` and `execution`. You can use auto-complete to easily find the options inside each sub-category, for example:
 
 ```python
 from qiskit_ibm_runtime.options import Options
@@ -35,12 +35,12 @@ options = Options(transpilation={"initial_layout": [0, 1, 2, 3]})
 
 ## Classes
 
-|                                                                                                                                                          |                                               |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------- |
-| [`Options`](qiskit_ibm_runtime.options.Options "qiskit_ibm_runtime.options.Options")(\[optimization\_level, ...])                                        | Options for the primitives.                   |
-| [`TranspilationOptions`](qiskit_ibm_runtime.options.TranspilationOptions "qiskit_ibm_runtime.options.TranspilationOptions")(\[skip\_transpilation, ...]) | Transpilation options.                        |
-| [`ResilienceOptions`](qiskit_ibm_runtime.options.ResilienceOptions "qiskit_ibm_runtime.options.ResilienceOptions")(\[noise\_amplifier, ...])             | Resilience options.                           |
-| [`ExecutionOptions`](qiskit_ibm_runtime.options.ExecutionOptions "qiskit_ibm_runtime.options.ExecutionOptions")(\[shots, init\_qubits])                  | Execution options.                            |
-| [`EnvironmentOptions`](qiskit_ibm_runtime.options.EnvironmentOptions "qiskit_ibm_runtime.options.EnvironmentOptions")(\[log\_level, callback, ...])      | Options related to the execution environment. |
-| [`SimulatorOptions`](qiskit_ibm_runtime.options.SimulatorOptions "qiskit_ibm_runtime.options.SimulatorOptions")(\[noise\_model, ...])                    | Simulator options.                            |
+|                                                                                                                                        |                                               |
+| -------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------- |
+| [`Options`](options-options "qiskit_ibm_runtime.options.Options")(\[optimization\_level, ...])                                         | Options for the primitives.                   |
+| [`TranspilationOptions`](options-transpilation-options "qiskit_ibm_runtime.options.TranspilationOptions")(\[skip\_transpilation, ...]) | Transpilation options.                        |
+| [`ResilienceOptions`](options-resilience-options "qiskit_ibm_runtime.options.ResilienceOptions")(\[noise\_amplifier, ...])             | Resilience options.                           |
+| [`ExecutionOptions`](options-execution-options "qiskit_ibm_runtime.options.ExecutionOptions")(\[shots, init\_qubits])                  | Execution options.                            |
+| [`EnvironmentOptions`](options-environment-options "qiskit_ibm_runtime.options.EnvironmentOptions")(\[log\_level, callback, ...])      | Options related to the execution environment. |
+| [`SimulatorOptions`](options-simulator-options "qiskit_ibm_runtime.options.SimulatorOptions")(\[noise\_model, ...])                    | Simulator options.                            |
 
