--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -46,7 +46,7 @@ Explore the [v1.3 release notes](/api/qiskit/release-notes/1.3), and read about 
 
 #### New features
 
-- You can now use the `layer_noise_model` option in `ResilienceOptionsV2` to pass in a noise model. When this field is set, all the mitigation strategies that require noise data skip the noise learning stage, and instead gather the required information from `layer_noise_model`. You can use the [NoiseLearner](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.noise_learner.NoiseLearner) class to learn noise and use it in a subsequent `Estimator` call.
+- You can now use the `layer_noise_model` option in `ResilienceOptionsV2` to pass in a noise model. When this field is set, all the mitigation strategies that require noise data skip the noise learning stage, and instead gather the required information from `layer_noise_model`. You can use the [NoiseLearner](/api/qiskit-ibm-runtime/noise-learner-noise-learner) class to learn noise and use it in a subsequent `Estimator` call.
 
 See the full [0.28.0 release notes](/api/qiskit-ibm-runtime/release-notes#0280-2024-08-15).
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
@@ -73,7 +73,7 @@ This summary of the latest changes to the Qiskit Runtime service applies to anyo
 
 ### 15 August 2024
 
-- Probabilistic error amplification (PEA) error mitigation method is now available for Estimator V2. See the [`ZneOptions` API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions) for more details.
+- Probabilistic error amplification (PEA) error mitigation method is now available for Estimator V2. See the [`ZneOptions` API reference](/api/qiskit-ibm-runtime/options-zne-options) for more details.
 - A new helper program `noise-learner` is now available. It allows characterizing the noise processes affecting the gates in one or more circuits of interest, based on the Pauli-Lindblad noise model. The output noise model can then be passed to Estimator via the `layer_noise_model` option.
 - V1 primitives are no longer supported.
 
@@ -90,7 +90,7 @@ The `optimization_level` option is deprecated for Estimator V2 and will be remov
 
 ### 3 June 2024
 
-Probabilistic error amplification (PEA) error mitigation method is now available as an experimental option for Estimator V2. See the [`EstimatorOptions` API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) for more details.
+Probabilistic error amplification (PEA) error mitigation method is now available as an experimental option for Estimator V2. See the [`EstimatorOptions` API reference](/api/qiskit-ibm-runtime/options-estimator-options) for more details.
 
 ### 28 March 2024
 
