--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -59,7 +59,7 @@
     "Because many of the underlying transpilation algorithms are stochastic, there is no guarantee that a better circuit will be found.\n",
     "</Admonition>\n",
     "\n",
-    "This page shows several examples of passing QPU information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider.FakeSherbrooke#fakesherbrooke) mock backend.\n",
+    "This page shows several examples of passing QPU information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/fake-provider-fake-sherbrooke#fakesherbrooke) mock backend.\n",
     "\n",
     "<span id=\"default-config\"></span>\n",
     "## Default configuration\n",
@@ -69,7 +69,7 @@
     "Import the necessary libraries and instantiate the QPU:\n",
     "In order to convert an abstract circuit to an ISA circuit that can run on a specific processor, the transpiler needs certain information about the processor.  Typically, this information is stored in the [`Backend`](/api/qiskit/qiskit.providers.Backend#backend) or [`Target`](/api/qiskit/qiskit.transpiler.Target#target) provided to the transpiler, and no further information is needed. However, you can also explicitly provide information for the transpiler to use, for example, if you have a specific use case, or if you believe this information will help the transpiler generate a more optimized circuit.\n",
     "\n",
-    "This topic shows several examples of passing information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider.FakeSherbrooke#fakesherbrooke) mock backend."
+    "This topic shows several examples of passing information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/fake-provider-fake-sherbrooke#fakesherbrooke) mock backend."
    ]
   },
   {
