--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -90,7 +90,7 @@
     "Once the circuits are submitted to the function, they are transpiled and\n",
     "optimized to minimize the number of layers with two-qubit gates (the noisier\n",
     "gates on quantum devices). The noise affecting the layers is learned through\n",
-    "[Qiskit Runtime](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.noise_learner.NoiseLearner)\n",
+    "[Qiskit Runtime](/api/qiskit-ibm-runtime/noise-learner-noise-learner)\n",
     "using a sparse Pauli-Lindblad noise model as described in E. van den Berg, Z.\n",
     "Minev, A. Kandala, K. Temme, Nat. Phys. (2023).\n",
     "[arXiv:2201.09866](https://arxiv.org/abs/2201.09866).\n",
