--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -81,20 +81,20 @@ Scroll to see the full table.
 |                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.       | Given by `backend.default_rep_delay`.|                      |
 | [max_execution_time](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)   |                          |       | Integer number of seconds in the range  [1, 10800]    | `10800` (3 hours)   | max_execution_time   |
 | [resilience](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2)           |                          |      |                               |                      | resilience    |
-|                      | [layer_noise_learning](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.LayerNoiseLearningOptions)     |      | `True`/`False`                | `True`               |      |
+|                      | layer_noise_learning     |      | `True`/`False`                | `True`               |      |
 |                      |                          | max_layers_to_learn     |  `None`/ integer >= 1                                                                      | `4`                    |                      |
 |                      |                          | shots_per_randomization |  integer >= 1                                                                         |  `128`                    |                      |
 |                      |                          | num_randomizations      |   integer >= 1                                                                            |  `32`                    |                      |
 |                      |                          | layer_pair_depths       |  list[int] of 2-10 values in the range [0, 200]                           | `(0, 1, 2, 4, 16, 32)`              |                      |
-|                      | [layer_noise_model](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2#layer_noise_model)       |        | `NoiseLearnerResult`/`Sequence[LayerError]`                      | `None`                      |                      |
+|                      | layer_noise_model       |        | `NoiseLearnerResult`/`Sequence[LayerError]`                      | `None`                      |                      |
 |                      | measure_mitigation       |        | `True`/`False`                      | `True`                      |                      |
-|                      | [measure_noise_learning](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.MeasureNoiseLearningOptions)   | num_randomizations      |  integer >= 1  | `32`                      |                      |
+|                      | measure_noise_learning   | num_randomizations      |  integer >= 1  | `32`                      |                      |
 |                      |                          | shots_per_randomization |  integer                                                                                | 'auto'                    |                      |
 |                      | pec_mitigation           |                         | `True`/`False`                                                                        | `False`                      |                      |
-|                      | [pec](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.PecOptions)   | max_overhead            |  `None`/ integer >1          | `100`                      |                      |
+|                      | pec   | max_overhead            |  `None`/ integer >1          | `100`                      |                      |
 |                      |                          | noise_gain              |  `auto`/ float in the range `[0, 1]`                                                     | `auto`                    |                      |
 |                      | zne_mitigation           |                         | `True`/`False`                                                                         | `False`                     |                      |
-|                      | [zne](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions)                      | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
+|                      | zne                      | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
 |                      |                          | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
 |                      |                          | extrapolated_noise_factors |         list of floats  |  `[0, *noise_factors]`|                      |
 |                      |                          | extrapolator            | one or more of `exponential`<br />`linear`<br />`double_exponential`<br />`polynomial_degree_(1 <= k <= 7)`<br />`fallback` | (`exponential`, `linear`) |                      |
