Reorg cutting wires, small edits to cutting gates

--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -72,7 +72,7 @@
     "First, partition the circuit and observable into *subcircuits* and *subobservables* using the [`partition_problem`](/api/qiskit-addon-cutting/qiskit-addon-cutting#partition_problem) method. This function ingests a partitioning scheme according to a label string of the form `\"AABB\"` where each label in this string corresponds to the `circuit` qubit in the same index. Qubits sharing a common partition label are grouped together, and any non-local gates that span more than one partition will be cut.\n",
     "\n",
     "<Admonition type=\"information\" title=\"Note\">\n",
-    "   The `observables` kwarg to `partition_problem` is of type PauliList. Observable term coefficients and phases are ignored during decomposition of the problem and execution of the subexperiments. They may be re-applied during reconstruction of the expectation value.\n",
+    "   The `observables` kwarg to `partition_problem` is of type [`PauliList`](/api/qiskit/qiskit.quantum_info.PauliList). Observable term coefficients and phases are ignored during decomposition of the problem and execution of the subexperiments. They may be re-applied during reconstruction of the expectation value.\n",
     "</Admonition>"
    ]
   },
@@ -389,7 +389,8 @@
     "    coefficients,\n",
     "    observable.paulis,\n",
     ")\n",
-    "# Reconstruct final expectation value\n",
+    "\n",
+    "# Apply the coefficients of the original observable\n",
     "reconstructed_expval = np.dot(reconstructed_expval_terms, observable.coeffs)\n",
     "\n",
     "estimator = EstimatorV2()\n",
@@ -404,6 +405,19 @@
     "print(\n",
     "    f\"Relative error in estimation: {np.real(np.round((reconstructed_expval-exact_expval) / exact_expval, 8))}\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faf4620d-6782-4fce-a99b-9e1d01f29951",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"tip\" title=\"Recommendations\">\n",
+    "    - Read the [Get started with circuit cutting using wire cuts](/guides/qiskit-addons-cutting-wires) guide.\n",
+    "    - Read the arXiv paper on [circuit knitting with classical communication](https://arxiv.org/abs/2205.00016)\n",
+    "</Admonition>"
    ]
   }
  ],
