didn't manage to save this change on my prev PR!

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -60,7 +60,7 @@ Scroll to see the full table.
 
 <Tabs>
   <TabItem value="Estimator" label="Estimator">
-| Option               | Sub-option               | Sub-sub-option          | Choices                                                                                   | Default                   | Options              |
+| Option               | Sub-option               | Sub-sub-option          | Choices                                                                                   | Default                   | Option               |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|----------------------|
 | [default_shots](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)        |                          |         | Integer in the range[0, `backend.max_shots`]| None           | default_shots        |
 | [default_precision](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)    |                          |                     |  float > 0     | `0.015625 (1 / sqrt(4096))`     | default_precision    |
