Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -105,8 +105,8 @@ For more information about these settings, see [Session maximum execution time.]
 
 A session ends in the following circumstances:
 
-* The maximum timeout (TTL) value is reached, resulting in the cancelation of all queued jobs.
-* The session is manually canceled, resulting in the cancelation of all queued jobs.
+* The maximum timeout (TTL) value is reached, resulting in the cancellation of all queued jobs.
+* The session is manually canceled, resulting in the cancellation of all queued jobs.
 * The session is manually closed.  The session stops accepting new jobs but continues to run queued jobs with priority.
 * If you use Session as a context manager, that is,  `with Session()`, the session is automatically closed when the context ends (the same behavior as using `session.close()`).
 
