--- a/docs/guides/qiskit-addons-aqc.mdx
+++ b/docs/guides/qiskit-addons-aqc.mdx
@@ -78,6 +78,7 @@ Given a circuit with $L$ qubits, a matrix-product state needs at most a bond dim
 
 <Admonition type="tip" title="Recommendations">
     - Read through the page on [getting started with AQC-Tensor](/guides/qiskit-addons-aqc-get-started)
+    - Read the tutorial on using AQC to [improve trotterized time evolution](https://learning.quantum.ibm.com/tutorial/improved-trotterized-time-evolution-with-approximate-quantum-compilation)
 </Admonition>
 
 
