--- a/docs/guides/qiskit-addons-obp.mdx
+++ b/docs/guides/qiskit-addons-obp.mdx
@@ -92,4 +92,5 @@ where $S$ represents the total number of slices and $\mathcal{U}_s$ denotes a si
 <Admonition type="tip" title="Recommendations">
     - [Get started with OBP.](/guides/qiskit-addons-obp-get-started)    
     - Become familiar with the [error mitigation techniques](/guides/error-mitigation-and-suppression-techniques) available in Qiskit Runtime.
+    - Read the tutorial on using [OBP to improve expectation values](https://learning.quantum.ibm.com/tutorial/improving-estimation-of-expectation-values-with-operator-backpropagation)
 </Admonition>
