--- a/docs/guides/qiskit-addons-sqd.mdx
+++ b/docs/guides/qiskit-addons-sqd.mdx
@@ -66,8 +66,8 @@ The bulk of the SQD workflow lies here wherein each of these subspace Hamiltonia
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Read through the [SQD getting started](/guides/qiskit-addons-sqd-get-started) page
-    - Read the tutorial on [improving energy estimation with SQD](https://learning.quantum.ibm.com/tutorial/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd)
+    - Read through the [SQD getting started](/guides/qiskit-addons-sqd-get-started) page.
+    - Read the tutorial on [improving energy estimation with SQD.](https://learning.quantum.ibm.com/tutorial/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd)
 </Admonition>
 
 ## References
